// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArtworkList /> 3개의 아이템을 그려준다 1`] = `
<span
  componentname="ArtworkItem"
/>
`;

exports[`<ArtworkList /> 정상적으로 렌더링된다 1`] = `
Array [
  <span
    componentname="ArtworkItem"
  />,
  <span
    componentname="ArtworkItem"
  />,
  <span
    componentname="ArtworkItem"
  />,
]
`;
